--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
 	</div>
 
 	<div class="tab-block">
+		
 		<div class="container tab-bg" style="z-index: 1;">
+			<!--
 			<ul class="nav nav-tabs">
 				<li class="nav-item">
 					<a class="nav-link tab-link active" data-toggle="tab" href="#description">Пойск туров<img class="earth-svg" src="img/tabs/ion_earth-outline.svg" alt=""></a>
@@ -345,7 +347,8 @@
 			</div>
 				</div>
 				
-			</div>
+			</div>-->
+			<iframe src="https://triphacker.kz/widget?company_id=134" border="0" width="100%" height="500px" style="border:0"></iframe>
 		</div>
 	</div>
 
