--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 	<div class="tab-block">
 		
-		<div class="container tab-bg" style="z-index: 1;">
+		<div class="container " style="z-index: 1;">
 			<!--
 			<ul class="nav nav-tabs">
 				<li class="nav-item">
