--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
 	<div class="tab-block">
 		
-		<div class="container " style="z-index: 1;">
-			<!--
+			<!--<div class="container " style="z-index: 1;">
+		
 			<ul class="nav nav-tabs">
 				<li class="nav-item">
 					<a class="nav-link tab-link active" data-toggle="tab" href="#description">Пойск туров<img class="earth-svg" src="img/tabs/ion_earth-outline.svg" alt=""></a>
@@ -347,9 +347,10 @@
 			</div>
 				</div>
 				
-			</div>-->
-			<iframe src="https://triphacker.kz/widget?company_id=134" border="0" width="100%" height="500px" style="border:0"></iframe>
-		</div>
+			</div>
+			
+		</div>-->
+		<iframe src="https://triphacker.kz/widget?company_id=134" border="0" width="100%" height="500px" style="border:0"></iframe>
 	</div>
 
 	
