--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@
 
 	
 	<div class="tour-car">
-		<div class="owl-nav">
+		<iframe src="https://triphacker.kz/hot_tour/widget?company_id=134" border="0" width="100%" height="700px" style="border:0"></iframe>
+		<!--<div class="owl-nav">
 			<div class="owl-prev"><</div>
 		</div>
 		<div class="owl-nav">
@@ -526,7 +527,7 @@
 				<button type="button" class="btn btn-all">Посмотреть все</button>
 			</div>
 			
-		</div>
+		</div>-->
 	</div>
 
 	<div class="most-direction">
