--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@
 			</div>
 			
 		</div>-->
-		<iframe src="https://triphacker.kz/widget?company_id=134" border="0" width="100%" height="500px" style="border:0"></iframe>
+		<iframe src="https://triphacker.kz/widget?company_id=134" border="0" width="100%" height="100%" style="border:0"></iframe>
 	</div>
 
 	
 	<div class="tour-car">
-		<iframe src="https://triphacker.kz/hot_tour/widget?company_id=134" border="0" width="100%" height="700px" style="border:0"></iframe>
+		<iframe src="https://triphacker.kz/hot_tour/widget?company_id=134" border="0" width="100%" height="100%" style="border:0"></iframe>
 		<!--<div class="owl-nav">
 			<div class="owl-prev"><</div>
 		</div>
